# crawler

./: .gitignore  CODE_QUALITY.md  OPENTELEMETRY.md  README.md  TESTING.md  cli.py  edition_core.py  extract_editions.py  main.py  pyproject.toml  requirements.txt  setup_logger.py  setup_telemetry.py
.github/workflows/: tests.yml
adapters/: __init__.py  cli.py  edition_cli.py  execution_cli.py  http_client.py  main_cli.py  storage_adapter.py
application/: __init__.py  edition_extraction_service.py  services.py  url_execution_service.py
domain/: content_normalizer.py  execution_models.py  extractors.py  models.py
infrastructure/: __init__.py  logging.py  telemetry.py
samples/: cdn-blocked.html  empty-editions.html  index-2025-11-07.html  multi-edition-5.html
scripts/: check_all.py
tests/: conftest.py
tests/e2e/: test_cli.py  test_edition_cli.py  test_execution_cli.py
tests/fixtures/expected/: index-2025-11-07.json  multi-edition-5.json  single-edition.json
tests/fixtures/html/: single-edition.html
tests/helpers/: fixtures.py
tests/integration/: test_edition_extraction_service.py  test_services.py  test_url_execution_service.py
tests/unit/: test_content_normalizer.py  test_extractors.py  test_http_client.py  test_models.py  test_storage_adapter.py
