[project]
name = "gaceta-oficial-crawler"
version = "0.1.0"
description = "Extract edition data from Gaceta Oficial HTML index files and output as JSON"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coloredlogs>=15.0.1",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-logging>=0.41b0",
]
